Fixed bag img not showing on xs screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,6 +29,16 @@ p {
     height: 2px;
 }
 
+.img-custom {
+    max-width: 100%;
+    height: auto;
+    max-height: 300px;
+    min-width: 60px;
+    min-height: 60px;
+    /* Adjust this value as needed */
+}
+
+
 /* ------------------------------ Custom colours */
 
 .blue {
@@ -435,5 +445,26 @@ header {
 
     .prod-price {
         font-size: 18px;
+    }
+
+    .decrement-qty {
+        background-color: red;
+        color: white;
+        border: 2px solid red;
+        font-size: 12px;
+        padding: 4px;
+    }
+
+    .increment-qty {
+        background-color: green;
+        color: white;
+        border: 2px solid green;
+        font-size: 12px;
+        padding: 4px;
+
+    }
+
+    .sm {
+        font-size: 12px;
     }
 }
